--- a/src/index.css
+++ b/src/index.css
@@ -292,3 +292,13 @@ body {
   margin-bottom: 8px;
 }
 
+.dev-info {
+  position: fixed;
+  bottom: 1rem;
+  left: 1rem;
+  background: #27272a;
+  padding: 0.5rem;
+  font-size: 0.75rem;
+  color: #a1a1aa;
+  border-radius: 0.375rem;
+}
