--- a/src/index.css
+++ b/src/index.css
@@ -300,7 +300,7 @@ body {
   background: var(--bg-panel);
   margin: 0 auto;
   padding: 1in;
-  overflow: auto;
+  overflow: hidden;
   border-radius: 0;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
 }
@@ -308,6 +308,10 @@ body {
 .editor-content .ProseMirror {
   min-height: 100%;
   height: 100%;
+}
+
+.page-wrapper {
+  margin-bottom: var(--spacing-container);
 }
 
 /* Login */
